# ParallelReview

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.reviewer  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-reviewer.txt  wsgi.py
review_browse/: config.py  factory.py
review_browse/routes/: ui.py  webhook.py
review_browse/services/: database.py  id_registry.py  reviews.py  scraper.py
review_browse/static/css/: style.css
review_browse/templates/: base.html  page_template.html
review_browse/templates/detail/: not_found.html  review.html
review_browse/templates/home/: home.html
review_browse/templates/list/: review_list.html
scripts/: _measure_theta.py  _probe_katex.py  _probe_strong.py  _probe_theta.py  build_review_page.py  cron_review.sh  fix_review_ids.py  review_new_papers.py  scrape_reviews.py  trigger_all_reviews.sh
